  -Create function clip_df(data.frame, lod) that clips a data.frame to a map.  This is useful
when you want to do statistics on a data.frame (such as above/below median values), and have your computations match the map.  For example, maps in choroplethr do not contain Alaska or Hawaii.
  -Rename vignettes so that they appear in proper order on CRAN website.

choroplethr 1.4.0
----------------------------------------------------------------

FEATURE
  -New choroplethr_animate function for animating choropleth maps.  See ?choroplethr_animate
  -Handle string data as values
  -add example datasets and update help
  -Add commas to scales.

BUG FIXES
  -Choropleths of state, county and zip data with factor values were broken

choroplethr 1.3.0
----------------------------------------------------------------

BUG FIXES
  -Subsetting by state was broken for state and county choropleths
  -Fix a bug where ACS state choropleths were not displaying titles
  
FEATURES
  -Some features to support integration with shiny - requested by pssguy via github.  
    -New function get_acs_column_names 
    -New parameter column_idx parameter to function get_acs_df
  -Improve formatting of discrete scales
  
choroplethr 1.2.0
----------------------------------------------------------------

FEATURES
-Create 3 new functions which support a workflow of giving users more control of choropleths
  -get_acs_df, which gets an ACS table as a data.frame.  You can then use, for example, cut2 to discretize the values as you see fit.
  -bind_df_to_map, which binds a data.frame of (region, value) pairs to a state, county or zip map.
  -render_choropleth, which renders a choropleth from (map, value) pairs.

-Improve documentation

choroplethr 1.1.0
----------------------------------------------------------------

FEATURES
  -Allow users to specify choropleths of a subset of states.  See the "states" parameter in ?choroplethr and ?choroplethr_acs.